safari mobile nav; z-index issues

--- a/modules/admin/src/resources/scss/components/_debug.scss
+++ b/modules/admin/src/resources/scss/components/_debug.scss
@@ -10,7 +10,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: index($elements, debug);
+    z-index: z-index(debug);
 
     .close {
         margin-top: -30px;
