--- a/modules/admin/src/resources/scss/components/_tooltip.scss
+++ b/modules/admin/src/resources/scss/components/_tooltip.scss
@@ -2,7 +2,7 @@
     margin: 0;
     opacity: 1;
     position: fixed;
-    z-index: index($elements, tooltip);
+    z-index: z-index(tooltip);
 
     &-right {
         margin-left: 3px;
