--- a/modules/admin/src/resources/scss/components/_zaa-checkbox-array.scss
+++ b/modules/admin/src/resources/scss/components/_zaa-checkbox-array.scss
@@ -7,5 +7,5 @@ zaa-checkbox-array .form-check {
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    z-index: index($elements, before-content);
+    z-index: z-index(before-content);
 }
