--- a/modules/admin/src/resources/scss/variables/_bootstrap.scss
+++ b/modules/admin/src/resources/scss/variables/_bootstrap.scss
@@ -108,3 +108,18 @@ $pagination-hover-bg: transparent;
 $pagination-active-bg: transparent;
 
 $pagination-line-height: 1.5;
+
+// ==================================================
+// Z-Index
+// ==================================================
+
+// Warning: Avoid customizing these values. They're used for a bird's eye view
+// of components dependent on the z-axis and are designed to all work together.
+
+$zindex-dropdown:           1000 !default;
+$zindex-sticky:             1020 !default;
+$zindex-fixed:              1030 !default;
+$zindex-modal-backdrop:     1040 !default;
+$zindex-modal:              z-index(modal);
+$zindex-popover:            1060 !default;
+$zindex-tooltip:            1070 !default;
